<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/home1"
        android:enabled="true"
        />
    <item android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:id="@+id/setting1"
        android:enabled="true"
        />
    <item android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:id="@+id/profile1"
        android:enabled="true"
        />
    <item android:title="@string/catalogue"
        android:icon="@drawable/ic_baseline_shop_24"
        android:id="@+id/catalogue1"
        android:enabled="true"
        />


</menu>